[gd_scene load_steps=10 format=3 uid="uid://cbn5lr8jk8ctl"]

[ext_resource type="Script" path="res://Map/map.gd" id="1_vwedo"]
[ext_resource type="Texture2D" uid="uid://bxlotn3p3gn1x" path="res://Map/backgound.jpg" id="2_qjhkq"]
[ext_resource type="Texture2D" uid="uid://k3wv6n43fnbl" path="res://Map/horizontal_wall.jpg" id="3_0176h"]
[ext_resource type="Texture2D" uid="uid://bon8123jlr6d3" path="res://Map/vertical_wall.jpg" id="4_7m6vm"]
[ext_resource type="Texture2D" uid="uid://cptlcfk0dgq8m" path="res://Map/wall.jpg" id="5_qjlpj"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ho1kq"]
texture = ExtResource("5_qjlpj")
0:0/size_in_atlas = Vector2i(4, 2)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-31.8198, -15.9099, 31.643, -16.2635, 31.8198, 16.4402, -32.1734, 16.617)
6:0/size_in_atlas = Vector2i(3, 5)
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24.25, -39.75, 24.25, -40, 23.75, 39.5, -24, 39.75)

[sub_resource type="TileSet" id="TileSet_sr3wd"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_ho1kq")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gamx5"]
size = Vector2(584, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ojde"]
size = Vector2(42, 669)

[node name="Map" type="Node2D"]
script = ExtResource("1_vwedo")

[node name="Tile" type="TileMap" parent="."]
position = Vector2(148.615, 0)
scale = Vector2(0.51, 1)
tile_set = SubResource("TileSet_sr3wd")
format = 2
layer_0/tile_data = PackedInt32Array(2359313, 393216, 0, 2097169, 393216, 0, 1835025, 393216, 0, 2359391, 393216, 0, 2097247, 393216, 0, 1900639, 393216, 0)

[node name="background" type="Node2D" parent="."]

[node name="Texture" type="TextureRect" parent="background"]
modulate = Color(0.901961, 0, 0.592157, 1)
offset_left = 944.305
offset_top = -16.235
offset_right = 1680.31
offset_bottom = 397.765
rotation = 1.5708
scale = Vector2(0.915, 1.61)
texture = ExtResource("2_qjhkq")

[node name="Top" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
position = Vector2(612, 5)
shape = SubResource("RectangleShape2D_gamx5")

[node name="ColorRect" type="ColorRect" parent="Top"]
offset_left = 320.0
offset_top = -16.0
offset_right = 903.0
offset_bottom = 24.0
color = Color(1, 0, 1, 1)

[node name="Texture" type="TextureRect" parent="Top"]
offset_left = 279.0
offset_top = -17.0
offset_right = 941.0
offset_bottom = 131.0
scale = Vector2(1, 0.28)
texture = ExtResource("3_0176h")

[node name="Bottom" type="Area2D" parent="."]

[node name="ColorRect2" type="ColorRect" parent="Bottom"]
offset_left = 320.0
offset_top = 624.0
offset_right = 904.0
offset_bottom = 656.0
color = Color(1, 0, 1, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom"]
position = Vector2(612, 640)
shape = SubResource("RectangleShape2D_gamx5")

[node name="Texture" type="TextureRect" parent="Bottom"]
offset_left = 279.0
offset_top = 613.245
offset_right = 941.0
offset_bottom = 761.245
scale = Vector2(1, 0.28)
texture = ExtResource("3_0176h")

[node name="Left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2(299, 325.5)
shape = SubResource("RectangleShape2D_6ojde")

[node name="ColorRect" type="ColorRect" parent="Left"]
offset_left = 280.0
offset_top = -16.0
offset_right = 320.0
offset_bottom = 664.0
color = Color(1, 0, 1, 1)

[node name="Texture_1" type="TextureRect" parent="Left"]
offset_left = 280.395
offset_top = -16.46
offset_right = 324.395
offset_bottom = 131.54
scale = Vector2(0.895, 1)
texture = ExtResource("4_7m6vm")

[node name="Texture_2" type="TextureRect" parent="Left"]
offset_left = 280.395
offset_top = 125.0
offset_right = 324.395
offset_bottom = 273.0
scale = Vector2(0.895, 1)
texture = ExtResource("4_7m6vm")

[node name="Texture_3" type="TextureRect" parent="Left"]
offset_left = 280.395
offset_top = 266.0
offset_right = 324.395
offset_bottom = 414.0
scale = Vector2(0.895, 1)
texture = ExtResource("4_7m6vm")

[node name="Texture_4" type="TextureRect" parent="Left"]
offset_left = 280.395
offset_top = 410.0
offset_right = 324.395
offset_bottom = 558.0
scale = Vector2(0.895, 1)
texture = ExtResource("4_7m6vm")

[node name="Texture_5" type="TextureRect" parent="Left"]
offset_left = 280.395
offset_top = 554.0
offset_right = 324.395
offset_bottom = 702.0
scale = Vector2(0.895, 0.735)
texture = ExtResource("4_7m6vm")

[node name="Right" type="Area2D" parent="."]
position = Vector2(624, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2(299, 321.5)
shape = SubResource("RectangleShape2D_6ojde")

[node name="ColorRect" type="ColorRect" parent="Right"]
offset_left = 280.0
offset_top = -16.0
offset_right = 320.0
offset_bottom = 656.0
color = Color(1, 0, 1, 1)

[node name="Texture_1" type="TextureRect" parent="Right"]
offset_left = 280.395
offset_top = -16.46
offset_right = 324.395
offset_bottom = 131.54
scale = Vector2(0.895, 1)
texture = ExtResource("4_7m6vm")

[node name="Texture_2" type="TextureRect" parent="Right"]
offset_left = 280.395
offset_top = 125.0
offset_right = 324.395
offset_bottom = 273.0
scale = Vector2(0.895, 1)
texture = ExtResource("4_7m6vm")

[node name="Texture_3" type="TextureRect" parent="Right"]
offset_left = 280.395
offset_top = 266.0
offset_right = 324.395
offset_bottom = 414.0
scale = Vector2(0.895, 1)
texture = ExtResource("4_7m6vm")

[node name="Texture_4" type="TextureRect" parent="Right"]
offset_left = 280.395
offset_top = 410.0
offset_right = 324.395
offset_bottom = 558.0
scale = Vector2(0.895, 1)
texture = ExtResource("4_7m6vm")

[node name="Texture_5" type="TextureRect" parent="Right"]
offset_left = 280.395
offset_top = 554.0
offset_right = 324.395
offset_bottom = 702.0
scale = Vector2(0.895, 0.735)
texture = ExtResource("4_7m6vm")

[connection signal="body_entered" from="Top" to="." method="_on_top_body_entered"]
[connection signal="body_entered" from="Bottom" to="." method="_on_bottom_body_entered"]
[connection signal="body_entered" from="Left" to="." method="_flip_ball_horizontally"]
[connection signal="body_entered" from="Right" to="." method="_flip_ball_horizontally"]
